@@ -25,10 +25,9 @@
 #ifndef JSONRPC_UDPSERVER_H
 #define JSONRPC_UDPSERVER_H
 
-#include <stdint.h>
-
 #include <sys/types.h>
 
+#include "jsonrpc_common.h"
 #include "jsonrpc_server.h"
 
 namespace Json
